Fix for drawing invalid layers in WebViewBenchmarkSupportImpl https://bugs.webkit.org/show_bug.cgi?id=92920

Patch by Daniel Murphy <dmurph@chromium.org> on 2012-08-01
Reviewed by Adrienne Walker.

The GraphicsLayers without content needed to be skipped.

* src/WebViewBenchmarkSupportImpl.cpp:
(WebKit::WebViewBenchmarkSupportImpl::acceleratedPaintUnclipped):

Canonical link: https://commits.webkit.org/110762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124391 268f45cc-cd09-0410-ab3c-d52691b4dbfc